# BitgetVolatilityTrader

./: README.md  adaptive_strategy.py  app.py  backtesting.py  bayesian_optimizer.py  bitget_api.py  extra_functions.py  indicators.py  main.py  optimize_strategies.py  optimized_strategies.json  pyproject.toml  strategy_optimizer.py  telegram_bot.py  utils.py  volatile_coins.json
